--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-          <form class="img-upload__form" id="upload-select-image" autocomplete="off">
+          <form class="img-upload__form" id="upload-select-image" autocomplete="off" method="POST" action="https://30.javascript.pages.academy/kekstagram" enctype="multipart/form-data">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
             <fieldset class="img-upload__start">
@@ -244,6 +244,7 @@
         <p class="social__text">{{текст комментария}}</p>
       </li>
     </template>
+    <script src="vendor/pristine/pristine.min.js" type="text/javascript"></script>
     <script type="module" src="js/main.js"></script>
     <script src="js/functions.js"></script>
 </body>
